# ObscuraGateway

./: .pre-commit-config.yaml  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTING.ru.md  README.md  README.ru.md  config.yml
.github/workflows/: ci.yml  github_release_publish.yml  lint.yml
docs/: architecture.md  architecture.ru.md  configuration.md  configuration.ru.md  internal_protocol.md  internal_protocol.ru.md  load_balancing.md  load_balancing.ru.md
include/obscuragateway/: backend_node.hpp  backend_pool.hpp  config.hpp  correlation.hpp  gateway.hpp  internal_protocol.hpp  router.hpp  stream_manager.hpp
src/: backend_node.cpp  backend_pool.cpp  config.cpp  correlation.cpp  gateway.cpp  internal_protocol.cpp  main.cpp  router.cpp  stream_manager.cpp
tests/: CMakeLists.txt  test_config.cpp  test_internal_protocol.cpp  test_router.cpp
